--- a/keras_learn_1.ipynb
+++ b/keras_learn_1.ipynb
@@ -1083,10 +1083,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 72,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1191,322 +1189,16 @@
       "\n",
       "Epoch 00049: val_acc did not improve from 0.53333\n",
       "\n",
-      "Epoch 00050: val_acc did not improve from 0.53333\n",
-      "\n",
-      "Epoch 00051: val_acc did not improve from 0.53333\n",
-      "\n",
-      "Epoch 00052: val_acc did not improve from 0.53333\n",
-      "\n",
-      "Epoch 00053: val_acc did not improve from 0.53333\n",
-      "\n",
-      "Epoch 00054: val_acc improved from 0.53333 to 0.66667, saving model to weights.best.h5\n",
-      "\n",
-      "Epoch 00055: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00056: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00057: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00058: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00059: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00060: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00061: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00062: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00063: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00064: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00065: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00066: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00067: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00068: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00069: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00070: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00071: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00072: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00073: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00074: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00075: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00076: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00077: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00078: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00079: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00080: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00081: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00082: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00083: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00084: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00085: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00086: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00087: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00088: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00089: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00090: val_acc did not improve from 0.66667\n",
-      "\n",
-      "Epoch 00091: val_acc improved from 0.66667 to 0.73333, saving model to weights.best.h5\n",
-      "\n",
-      "Epoch 00092: val_acc did not improve from 0.73333\n",
-      "\n",
-      "Epoch 00093: val_acc did not improve from 0.73333\n",
-      "\n",
-      "Epoch 00094: val_acc did not improve from 0.73333\n",
-      "\n",
-      "Epoch 00095: val_acc did not improve from 0.73333\n",
-      "\n",
-      "Epoch 00096: val_acc did not improve from 0.73333\n",
-      "\n",
-      "Epoch 00097: val_acc did not improve from 0.73333\n",
-      "\n",
-      "Epoch 00098: val_acc did not improve from 0.73333\n",
-      "\n",
-      "Epoch 00099: val_acc did not improve from 0.73333\n",
-      "\n",
-      "Epoch 00100: val_acc did not improve from 0.73333\n",
-      "\n",
-      "Epoch 00101: val_acc improved from 0.73333 to 0.76667, saving model to weights.best.h5\n",
-      "\n",
-      "Epoch 00102: val_acc did not improve from 0.76667\n",
-      "\n",
-      "Epoch 00103: val_acc did not improve from 0.76667\n",
-      "\n",
-      "Epoch 00104: val_acc did not improve from 0.76667\n",
-      "\n",
-      "Epoch 00105: val_acc improved from 0.76667 to 0.80000, saving model to weights.best.h5\n",
-      "\n",
-      "Epoch 00106: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00107: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00108: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00109: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00110: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00111: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00112: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00113: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00114: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00115: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00116: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00117: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00118: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00119: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00120: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00121: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00122: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00123: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00124: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00125: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00126: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00127: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00128: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00129: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00130: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00131: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00132: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00133: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00134: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00135: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00136: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00137: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00138: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00139: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00140: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00141: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00142: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00143: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00144: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00145: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00146: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00147: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00148: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00149: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00150: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00151: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00152: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00153: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00154: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00155: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00156: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00157: val_acc did not improve from 0.80000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Epoch 00158: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00159: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00160: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00161: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00162: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00163: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00164: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00165: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00166: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00167: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00168: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00169: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00170: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00171: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00172: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00173: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00174: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00175: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00176: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00177: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00178: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00179: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00180: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00181: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00182: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00183: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00184: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00185: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00186: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00187: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00188: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00189: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00190: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00191: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00192: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00193: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00194: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00195: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00196: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00197: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00198: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00199: val_acc did not improve from 0.80000\n",
-      "\n",
-      "Epoch 00200: val_acc did not improve from 0.80000\n"
+      "Epoch 00050: val_acc did not improve from 0.53333\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fcc298eb1d0>"
+       "<keras.callbacks.History at 0x7fcc05c147f0>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,7 +1243,7 @@
     "filepath = 'weights.best.h5'\n",
     "checkpoint = ModelCheckpoint(filepath=filepath, monitor='val_acc', verbose=1, save_best_only=True, mode='max')\n",
     "callback_list = [checkpoint]\n",
-    "model.fit(x, Y_labels, validation_split=0.2, epochs=200, batch_size=5, verbose=0, callbacks=callback_list)\n",
+    "model.fit(x, Y_labels, validation_split=0.2, epochs=50, batch_size=5, verbose=0, callbacks=callback_list)\n",
     "\n"
    ]
   },
@@ -2783,11 +2475,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 卷积神经网络"
+   ]
   },
   {
    "cell_type": "code",
